fixed position for project elements on mobile

--- a/projectStyle.css
+++ b/projectStyle.css
@@ -4,7 +4,6 @@
     height: 32em;
 }
 
-
 .projectEle {
     border: 2px ridge #FFFFFF;
     border-radius: 2em;
@@ -77,7 +76,7 @@
 @media screen and (max-width:768px) {
     .projectEle {
         position: static;
-        margin-left: 6em;
+        margin-left: 12em;
         margin-top: 1em;
     }
 }
